--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "A module loader",
   "main": "libs/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mengdu/requiresjs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mengdu/requiresjs/issues"
   },
   "keywords": [
     "requirejs",
@@ -13,5 +20,9 @@
     "require-dir"
   ],
   "author": "lanyue",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  }
 }
